<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.radon.aplikacjamedyczna.Algorytmy.VkaFragments.VkaFragmentStep2_1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/algorytmVKA_step2_1_1"
        android:id="@+id/textView_Vka_step_2_1_1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:layout_margin="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/algorytmVKA_step2_1_2"
        android:id="@+id/textView_Vka_step_2_1_2"
        android:layout_below="@+id/textView_Vka_step_2_1_1"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/algorytmVKA_step2_1_3"
        android:id="@+id/textView_Vka_step_2_1_3"
        android:layout_below="@+id/textView_Vka_step_2_1_2"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/algorytmVKA_step2_1_4"
        android:id="@+id/textView_Vka_step_2_1_4"
        android:layout_below="@+id/textView_Vka_step_2_1_3"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:layout_margin="10dp"/>
</RelativeLayout>
