


<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.radon.aplikacjamedyczna.Skale.CHA2DS2VAScActivity"
        android:background="@color/white_color"
        android:id="@+id/relativeLayout">


        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/skale_color"
            android:id="@+id/layout"
            android:layout_alignStart="@+id/open_menu_button"
            android:weightSum="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:columnCount="21"
            android:layout_alignParentRight="false"
            android:gravity="center_vertical"
            android:baselineAligned="true">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/open_menu_button"
                android:background="@drawable/menu_open_icon_white"
                android:onClick="open_menu"
                android:layout_marginRight="20dp"
                android:layout_column="0"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="CHA2-DS2-VASc"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:layout_marginRight="0dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_column="10"
                android:layout_weight="0.60"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/info_button"
                android:background="@drawable/info_icon"
                android:onClick="open_info"
                android:layout_row="0"
                android:layout_column="20"
                android:layout_alignTop="@+id/open_menu_button"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_below="@+id/layout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true">
            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:id="@+id/RelativeLayout2">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skala_cha2_ds2_vasc_czynnik_1"
                    android:id="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_1"
                    android:layout_gravity="left"
                    android:layout_marginTop="10dp"
                    android:textSize="15dp"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/black_color"
                    android:layout_below="@+id/layout" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skala_cha2_ds2_vasc_czynnik_2"
                    android:id="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_2"
                    android:layout_gravity="left"
                    android:textSize="15dp"
                    android:textColor="@color/black_color"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_1" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skala_cha2_ds2_vasc_czynnik_3"
                    android:id="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_3"
                    android:layout_gravity="left"
                    android:textSize="15dp"
                    android:textColor="@color/black_color"
                    android:layout_below="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_2"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skala_cha2_ds2_vasc_czynnik_4"
                    android:id="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_4"
                    android:layout_gravity="left"
                    android:textSize="15dp"
                    android:textColor="@color/black_color"
                    android:layout_below="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_3"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentLeft="false" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skala_cha2_ds2_vasc_czynnik_5"
                    android:id="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_5"
                    android:layout_gravity="left"
                    android:textSize="15dp"
                    android:textColor="@color/black_color"
                    android:layout_below="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_4"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skala_cha2_ds2_vasc_czynnik_6"
                    android:id="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_6"
                    android:layout_gravity="left"
                    android:textSize="15dp"
                    android:textColor="@color/black_color"
                    android:layout_below="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_5"
                    android:layout_marginTop="10dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skala_cha2_ds2_vasc_czynnik_7"
                    android:id="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_7"
                    android:layout_gravity="left"
                    android:textSize="15dp"
                    android:textColor="@color/black_color"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_6" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skala_cha2_ds2_vasc_czynnik_8"
                    android:id="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_8"
                    android:layout_gravity="left"
                    android:textSize="15dp"
                    android:textColor="@color/black_color"
                    android:layout_below="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_7"
                    android:layout_marginTop="10dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_add_6"
                    android:background="@drawable/question_mark_icon"
                    android:onClick="open_add_dialog_6"
                    android:layout_above="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_7"
                    android:layout_alignParentEnd="true"
                    android:layout_alignRight="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_6"
                    android:layout_toLeftOf="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView_wynik"
                    android:textSize="20dp"
                    android:textColor="@color/black_color"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/textView_punkty" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView_punkty"
                    android:layout_below="@+id/button_check"
                    android:layout_alignParentStart="true"
                    android:textSize="20dp"
                    android:textColor="@color/black_color" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sprawdź wynik"
                    android:id="@+id/button_check"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentStart="true"
                    android:onClick="sprawdz_wynik"
                    android:layout_below="@+id/skala_cha2_ds2_vasc_czynnik_ryzyka_8"
                    android:background="@drawable/buttons_in_scales"
                    android:textColor="@color/white_color"/>

            </RelativeLayout>

        </ScrollView>





    </RelativeLayout>


    <ListView
        android:id="@+id/navList"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:textColor="#000000"
        android:layout_marginTop="0dp"
        android:paddingLeft="0dp"
        android:divider="#ffffff"/>

</android.support.v4.widget.DrawerLayout>
